Add Images and Minor Fixes

--- a/hello.css
+++ b/hello.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #63de6bff;
+    background-color: #4cfb4c;
     font-family: "Nunito Sans ", sans-serif;
     color: whitesmoke;
 }
